# uselytics

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yaml
ingest/: Cargo.toml  README.md
ingest/src/: config.rs  error.rs  ip.rs  main.rs  response.rs
models/: Cargo.toml
models/src/: main.rs
waitlist/: bun.lockb  package.json
waitlist/src/: env.js
waitlist/src/app/: action.ts  layout.tsx  page.tsx
web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bun.lockb  next.config.js  package.json  start-database.sh  tsconfig.json
web/prisma/: schema.prisma
web/src/: env.js
web/src/app/: action.ts  layout.tsx  page.tsx  waitlist-form.tsx
web/src/app/sites/: layout.tsx  page.tsx
web/src/components/emails/: waitlist.tsx
web/src/lib/: auth.js  auth.ts
